# win-calculator-on-apple

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Shared/: Command.swift  ContentView.swift  Control.swift  MSCalculator (macOS)-Bridging-Header.h  MSCalculatorApp.swift  MSCalculatorWrapper.h  MSCalculatorWrapper.mm
Tests iOS/: Tests_iOS.swift  Tests_iOSLaunchTests.swift
Tests macOS/: Tests_macOS.swift  Tests_macOSLaunchTests.swift
assets/: Calculator.icns
